--- a/app/src/main/res/layout/rulif.xml
+++ b/app/src/main/res/layout/rulif.xml
@@ -13,7 +13,7 @@
         android:gravity="center"
         android:textColor="#FAFAFA"
         android:background="#6D9FC728"
-        android:text="Aim and collect and earn points. For a mushroom 50 for a harp 100. If you do not have time, then the points will decrease by 10"
+        android:text="Aim and collect and earn points. For a girb 50 for a harp 100. If you do not have time, then the points will decrease by 10"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
